; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_renames.c_test_merge_workdir_renames__initialize.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_renames.c_test_merge_workdir_renames__initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TEST_REPO_PATH = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"merge.conflictstyle\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"merge\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_workdir_renames__initialize() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @TEST_REPO_PATH, align 4
  %3 = call i32 @cl_git_sandbox_init(i32 %2)
  store i32 %3, i32* @repo, align 4
  %4 = load i32, i32* @repo, align 4
  %5 = call i32 @git_repository_config(i32** %1, i32 %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @git_config_set_string(i32* %7, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_config_free(i32* %10)
  ret void
}

declare dso_local i32 @cl_git_sandbox_init(i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_config(i32**, i32) #1

declare dso_local i32 @git_config_set_string(i32*, i8*, i8*) #1

declare dso_local i32 @git_config_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
